[package]
name = "distinction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "distinction"

[features]
default = ["use_logging"]
use_logging = ["log", "env_logger"]

[dependencies]
rand = { version = "0.8.5", default-features = false, features = [
    "getrandom",
    "small_rng",
] }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", default-features = false, optional = true }
quickcheck = "1"
quickcheck_macros = "1"
